--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -47,7 +47,7 @@
                 <br>
                Rossella Bochicchio, Vince T.M. Macaset, Claudia Pontiggia, Pierre D. Rebong, Filippo Rogai, Eleonora Rossetti, Jinze Xu
                <br>
-               Developed whit<mat-icon style="font-size: 12pt; padding-top: 10px;">favorite</mat-icon>on Angular
+               Developed with<mat-icon style="font-size: 12pt; padding-top: 10px;">favorite</mat-icon>on Angular
             </div>
 
         </div>
