--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,6 +19,6 @@
     </mat-card-content>
 <div class="button-row">
     <button mat-stroked-button color="primary" (click)="login()">Login</button>
-    <button mat-stroked-button color="primary" routerLink="/registration">Non hai l'account? Registrati</button>
+    <button mat-stroked-button color="primary" routerLink="/registration">Non hai l'account? Partecipa anche tu!</button>
     </div>
 </mat-card>
