--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -28,6 +28,6 @@
         </mat-form-field>
     </mat-card-content>   
 <div class="button-row">
-    <button mat-stroked-button color="primary">Registrati</button>
+    <button mat-stroked-button color="primary">Partecipa anche tu!</button>
     </div>
 </mat-card>
