text decoration none su footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -40,7 +40,7 @@
         <div class="separate">
             <hr class="line">
             <div class="paragraph" style="font-weight: bold;">
-                <a href="app-ringraziamenti">Green Energy For Future</a>
+                <a style="text-decoration: none; color: white;" href="app-ringraziamenti">Green Energy For Future</a>
             </div>
             <div class="paragraph" style="font-size: small; ">
                 PCTO IIS Leonardo Da Vinci
